# ksw-school-scrape

./: .env  .gcloudignore  .gitignore  .project  .pylintrc  KSW US School Visualization.ipynb  README.md  activate  fetch.py  fetch_wksa.py  geocoder.py  geocoder_googs.py  geoetl.py  geovis.py  main.py  pyproject.toml  pytest.ini  requirements.txt  runTests.sh  school_data.csv
.circleci/: config.yml
data/: school_data.csv  school_data.csv.old  school_geodata.csv  test_school_data.csv  test_school_geodata.csv
data/2015-07-06/: school_geodata.csv
data/2015-07-23/: school_data.csv  school_geodata.csv
data/2015-12-24/: school_data.csv  school_geodata.csv
data/2018-03-17/: school_data.csv  school_geodata.csv
data/2019-01-01/: school_data.csv  school_geodata.csv
hohgwuhn/: fetch_wksa.py  gcs.py  geocoder_googs.py  geoetl.py  geovis.py
scripts/: createSchedule.sh  runTests.sh
test-reports/: coverage.xml
test/test_hohgwuhn/: test_fetch_wksa.py  test_geocoder_googs.py
